--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="task1.html">MIN and MAX of given Input</a>
+    <a href="task1.html">MIN and MAX of given Input</a><br><br>
     <a href="task2.html">Random OTP Genarator</a>
 </body>
 </html>
